--- a/assets/package.json
+++ b/assets/package.json
@@ -6,9 +6,16 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@popperjs/core": "^2.3.3",
+    "autoprefixer": "^9.7.6",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "postcss-loader": "^3.0.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
