--- a/assets/package.json
+++ b/assets/package.json
@@ -6,13 +6,14 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@popperjs/core": "^2.3.3",
     "autoprefixer": "^9.7.6",
     "bootstrap": "^4.4.1",
+    "deploy": "^1.0.3",
     "jquery": "^3.5.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2"
