--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - image: circleci/elixir:1.10
         environment:
           DATABASE_URL_TEST: postgresql://root@localhost/circle_test?sslmode=disable
+          TENERVES_URL_TEST: postgresql://root@localhost/circle_test?sslmode=disable
 
       - image: circleci/postgres:9.6.2
         environment:
