--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -66,6 +66,37 @@ jobs:
       run: mix format --check-formatted
     - name: Run Credo
       run: mix credo --strict
+    - name: Run Tests
+      run: mix test
+
+  dialyzer:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        elixir: [1.10.2]
+        otp: [22.2.8]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup elixir
+      uses: actions/setup-elixir@v1
+      with:
+        elixir-version: ${{ matrix.elixir }}
+        otp-version: ${{ matrix.otp }}
+    - name: Retrieve Mix Dependencies Cache
+      uses: actions/cache@v1
+      id: mix-cache # id to use in retrieve action
+      with:
+        path: deps
+        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+    - name: Install Mix Dependencies
+      if: steps.mix-cache.outputs.cache-hit != 'true'
+      run: |
+        mix local.rebar --force
+        mix local.hex --force
+        mix deps.get
     - name: Retrieve PLT Cache
       uses: actions/cache@v1
       id: plt-cache
@@ -79,13 +110,13 @@ jobs:
         mix dialyzer --plt
     - name: Run dialyzer
       run: mix dialyzer --no-check --halt-exit-status
-    - name: Run Tests
-      run: mix test
 
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - test
+      - dialyzer
 
     steps:
       - name: Checkout
