Separate build step

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -106,6 +106,9 @@ jobs:
       run: |
         mkdir -p priv/plts
         mix dialyzer --plt
+    - name: Build
+      run: |
+        mix compile
     - name: Run dialyzer
       run: mix dialyzer --no-check
 
