Revert "Use github cache"
This reverts commit 68e654ff89fe59f99b29a32048d47c7bce9e5965.

This didn't actually help multi-stage caching.

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -142,13 +142,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -159,6 +152,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/scrooge:master
+          cache-to: type=inline
           build-args: ${{ steps.meta.outputs.build-args }}
