--- a/assets/package.json
+++ b/assets/package.json
@@ -1,33 +1,38 @@
 {
   "repository": {},
-  "license": "MIT",
+  "description": "",
+  "license": "GPL-3",
   "scripts": {
     "deploy": "webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.5",
-    "bootstrap": "^4.6.0",
-    "deploy": "^1.0.3",
-    "jquery": "3.6.0",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.0-alpha1",
+    "child-replace-with-polyfill": "^1.0.1",
+    "classlist-polyfill": "^1.2.0",
+    "formdata-polyfill": "^3.0.20",
+    "mdn-polyfills": "^5.20.0",
+    "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
     "popper.js": "^1.16.1",
-    "postcss-loader": "^5.2.0",
-    "sass": "^1.32.12",
-    "sass-loader": "^11.0.1"
+    "url-search-params-polyfill": "^8.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "mini-css-extract-plugin": "^1.6.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "5.36.2",
-    "webpack-cli": "^4.7.0"
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "sass-loader": "^8.0.2",
+    "node-sass": "^4.13.1",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "terser-webpack-plugin": "^2.3.2",
+    "webpack": "4.41.5",
+    "webpack-cli": "^3.3.2"
   }
 }
