Synchronise with other repos

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     # Service containers to run with `container-job`
@@ -14,8 +13,8 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        ports: ['5432:5432']
         image: postgres
+        ports: ["5432:5432"]
         # Provide the password for postgres
         env:
           POSTGRES_USER: postgres
@@ -39,42 +38,41 @@ jobs:
       MIX_ENV: test
 
     steps:
-    - uses: actions/checkout@v2.3.4
-    - name: Setup elixir
-      uses: erlef/setup-elixir@v1.7
-      with:
-        elixir-version: ${{ matrix.elixir }}
-        otp-version: ${{ matrix.otp }}
-    - name: Retrieve Mix Dependencies Cache
-      uses: actions/cache@v2.1.6
-      id: mix-cache # id to use in retrieve action
-      with:
-        path: deps
-        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
-    - name: Install Mix Dependencies
-      if: steps.mix-cache.outputs.cache-hit != 'true'
-      run: |
-        mix local.rebar --force
-        mix local.hex --force
-        mix deps.get
-    - name: Build
-      run: |
-        mix compile
-    - name: Install assets
-      run: |
-        npm install --prefix assets
-    - name: Build assets
-      run: |
-        npm run deploy --prefix assets
-    - name: Check Formatting
-      run: mix format --check-formatted
-    - name: Run Credo
-      run: mix credo --strict
-    - name: Run Tests
-      run: mix test
+      - uses: actions/checkout@v2.3.4
+      - name: Setup elixir
+        uses: erlef/setup-elixir@v1.7
+        with:
+          elixir-version: ${{ matrix.elixir }}
+          otp-version: ${{ matrix.otp }}
+      - name: Retrieve Mix Dependencies Cache
+        uses: actions/cache@v2.1.6
+        id: mix-cache # id to use in retrieve action
+        with:
+          path: deps
+          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+      - name: Install Mix Dependencies
+        if: steps.mix-cache.outputs.cache-hit != 'true'
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+      - name: Build
+        run: |
+          mix compile
+      - name: Install assets
+        run: |
+          npm install --prefix assets
+      - name: Build assets
+        run: |
+          npm run deploy --prefix assets
+      - name: Check Formatting
+        run: mix format --check-formatted
+      - name: Run Credo
+        run: mix credo --strict
+      - name: Run Tests
+        run: mix test
 
   dialyzer:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -83,40 +81,40 @@ jobs:
         otp: [23.2.7]
 
     steps:
-    - uses: actions/checkout@v2.3.4
-    - name: Setup elixir
-      uses: erlef/setup-elixir@v1.7
-      with:
-        elixir-version: ${{ matrix.elixir }}
-        otp-version: ${{ matrix.otp }}
-    - name: Retrieve Mix Dependencies Cache
-      uses: actions/cache@v2.1.6
-      id: mix-cache # id to use in retrieve action
-      with:
-        path: deps
-        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
-    - name: Install Mix Dependencies
-      if: steps.mix-cache.outputs.cache-hit != 'true'
-      run: |
-        mix local.rebar --force
-        mix local.hex --force
-        mix deps.get
-    - name: Retrieve PLT Cache
-      uses: actions/cache@v2.1.6
-      id: plt-cache
-      with:
-        path: priv/plts
-        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}-2
-    - name: Create PLTs
-      if: steps.plt-cache.outputs.cache-hit != 'true'
-      run: |
-        mkdir -p priv/plts
-        mix dialyzer --plt
-    - name: Build
-      run: |
-        mix compile
-    - name: Run dialyzer
-      run: mix dialyzer --no-check
+      - uses: actions/checkout@v2.3.4
+      - name: Setup elixir
+        uses: erlef/setup-elixir@v1.7
+        with:
+          elixir-version: ${{ matrix.elixir }}
+          otp-version: ${{ matrix.otp }}
+      - name: Retrieve Mix Dependencies Cache
+        uses: actions/cache@v2.1.6
+        id: mix-cache # id to use in retrieve action
+        with:
+          path: deps
+          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+      - name: Install Mix Dependencies
+        if: steps.mix-cache.outputs.cache-hit != 'true'
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+      - name: Retrieve PLT Cache
+        uses: actions/cache@v2.1.6
+        id: plt-cache
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}-2
+      - name: Create PLTs
+        if: steps.plt-cache.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p priv/plts
+          mix dialyzer --plt
+      - name: Build
+        run: |
+          mix compile
+      - name: Run dialyzer
+        run: mix dialyzer --no-check
 
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
