Rename master branch to main

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -171,6 +171,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/scrooge:master
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/scrooge:main
           cache-to: type=inline
           build-args: ${{ steps.meta.outputs.build-args }}
