--- a/assets/package.json
+++ b/assets/package.json
@@ -8,27 +8,30 @@
     "child-replace-with-polyfill": "^1.0.1",
     "classlist-polyfill": "^1.2.0",
     "formdata-polyfill": "^4.0.10",
+    "leaflet": "^1.7.1",
+    "leaflet.fullscreen": "^2.2.0",
+    "leaflet.markercluster": "^1.5.3",
     "mdn-polyfills": "^5.20.0",
-    "url-search-params-polyfill": "^8.1.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "topbar": "^1.0.0"
+    "topbar": "^1.0.0",
+    "url-search-params-polyfill": "^8.1.1"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "^5.1.3",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "glob": "7.2.0",
     "mini-css-extract-plugin": "^2.4.5",
-    "webpack": "5.64.2",
-    "webpack-cli": "^4.9.1",
     "node-sass": "^6.0.1",
-    "sass-loader": "^12.3.0",
-    "bootstrap": "^5.1.3",
-    "@popperjs/core": "^2.11.0",
     "prettier": "^2.5.0",
-    "prettier-plugin-eex": "^0.5.0"
+    "prettier-plugin-eex": "^0.5.0",
+    "sass-loader": "^12.3.0",
+    "webpack": "5.64.2",
+    "webpack-cli": "^4.9.1"
   },
   "engines": {
     "node": ">=14.x"
