Use latest workflows

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,13 +7,13 @@ on:
 jobs:
   test:
     name: Setup, Build, Test
-    uses: brianmay/workflows/.github/workflows/elixir.yaml@e5a000ff69ef3221ec84d3096cd9f22b73a35a37
+    uses: brianmay/workflows/.github/workflows/elixir.yaml@main
     with:
       plts_cache_postfix: "-1"
 
   push:
     name: Push
-    uses: brianmay/workflows/.github/workflows/docker.yaml@e5a000ff69ef3221ec84d3096cd9f22b73a35a37
+    uses: brianmay/workflows/.github/workflows/docker.yaml@main
     secrets:
       DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
     needs:
