Add DEPLOY_SECRET to ci

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,5 +16,6 @@ jobs:
     uses: brianmay/workflows/.github/workflows/docker.yaml@main
     secrets:
       DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+      DEPLOY_SECRET: ${{ secrets.DEPLOY_SECRET }}
     needs:
       - test
